add(feat):login with hash
