# server/src/controllers/user.controller.ts
@@ -1,11 +1,12 @@
 import { Route, Post, Request, Controller, Get, Body, Tags, Query } from "tsoa";
 import express from "express";
 import UserService from "../services/user.service";
+import { loginData } from "../@types/loginData.type";
 
 
 
-@Route("users")
-@Tags("User")
+@Route("")
+@Tags("User Route")
 class UserController extends Controller {
 
     @Get("/getUsers")
@@ -18,9 +19,14 @@ class UserController extends Controller {
         return UserService.getUser(username);
     }
 
+    @Post("/login")
+    async loginUser(@Request() req: express.Request, @Body() body: loginData) {
+        const data = await UserService.loginUser(body.username, body.password);
 
+        return data;
+    }
 
-    @Post("/user")
+    @Post("/register")
     async registerUser(@Request() req: express.Request, @Body() body: any) {
         const data = await UserService.registerNewUser(body);
 
