# server/src/services/user.service.ts
@@ -1,6 +1,7 @@
 import { registerUser } from "../@types/registerUser.type";
 import { User } from "../entities/user.entity"
 import bcrypt from "bcrypt";
+import bcryptUtil from "../utils/bcrypt.util";
 
 
 class UserService {
@@ -14,19 +15,35 @@ class UserService {
             });
             return user;
         }
-        catch (error) {
+        catch (error: any) {
             console.log(`error while inserting data`, error)
             throw new error;
         }
     }
+
+    async loginUser(username: string, password: string) {
+        const user = await User.findOne({ where: { username: username } });
+        console.log(user);
+        if (user) {
+            const hash = await bcrypt.hash(password, 11);
+            const isValid = await bcrypt.compare(password, user.password);
+            if (isValid) {
+                return user;
+            }
+            return { "message": "wrong password" }
+        }
+        return { "message": "user not found" }
+
+    }
+
 
     async getUsers() {
         const data: User[] = await User.find()
         return data;
     }
 
-    async getUser(username:string){
-        const user = await User.findOne({where:{username:username}});
+    async getUser(username: string) {
+        const user = await User.findOne({ where: { username: username } });
         return user;
     }
 
